2006-05-18 Braden McDaniel  <braden@endoframe.com>

	Implemented Browser.createVrmlFromURL() in the Script node
	JavaScript binding.

	* src/libopenvrml/openvrml/script.cpp
	(js_::script): Granted friendship to
	js_::Browser::createVrmlFromUrl.
	(js_::Browser::createVrmlFromURL(JSContext *, JSObject *, uintN,
	jsval *, jsval *)): Delegate to
	openvrml::browser::create_vrml_from_url.

2006-05-18 Braden McDaniel  <braden@endoframe.com>

	Renamed "node_class" to "node_metatype".

	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/node_impl_util.cpp
	* src/libopenvrml/openvrml/node_impl_util.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h
	* src/libopenvrml/openvrml/x3d_cad_geometry.cpp
	* src/libopenvrml/openvrml/x3d_cad_geometry.h
	* src/libopenvrml/openvrml/x3d_core.cpp
	* src/libopenvrml/openvrml/x3d_core.h
	* src/libopenvrml/openvrml/x3d_dis.cpp
	* src/libopenvrml/openvrml/x3d_dis.h
	* src/libopenvrml/openvrml/x3d_environmental_effects.cpp
	* src/libopenvrml/openvrml/x3d_environmental_effects.h
	* src/libopenvrml/openvrml/x3d_event_utilities.cpp
	* src/libopenvrml/openvrml/x3d_event_utilities.h
	* src/libopenvrml/openvrml/x3d_geometry2d.cpp
	* src/libopenvrml/openvrml/x3d_geometry2d.h
	* src/libopenvrml/openvrml/x3d_geospatial.cpp
	* src/libopenvrml/openvrml/x3d_geospatial.h
	* src/libopenvrml/openvrml/x3d_grouping.cpp
	* src/libopenvrml/openvrml/x3d_grouping.h
	* src/libopenvrml/openvrml/x3d_hanim.cpp
	* src/libopenvrml/openvrml/x3d_hanim.h
	* src/libopenvrml/openvrml/x3d_interpolation.cpp
	* src/libopenvrml/openvrml/x3d_interpolation.h
	* src/libopenvrml/openvrml/x3d_key_device_sensor.cpp
	* src/libopenvrml/openvrml/x3d_key_device_sensor.h